Minor tweak